--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -11,10 +11,15 @@
     "    - tf.estimator\n",
     "    - tf.data\n",
     "    - tf.nn\n",
+    "    - TFRecord\n",
+    "    - tf中的Feature\n",
     "    - sess\n",
     "    - 数据类型 \n",
     "    - 激活函数\n",
     "    - 损失函数\n",
+    "    - 优化器\n",
+    "    - 指标\n",
+    "    - 异常\n",
     "- 变量\n",
     "- 常见张量计算\n",
     "- 常见张量操作\n",
@@ -123,7 +128,14 @@
    "outputs": [],
    "source": [
     "# tf.estimator\n",
-    "    # tf.estimator.RunConfig\n",
+    "    # 如果使用Estimator，就不用再使用Session\n",
+    "    # tf.estimator.RunConfig: 用于控制内部和checkpoints等\n",
+    "        # model_dir: 指定存储模型参数，graph等的路径\n",
+    "        # save_summary_steps: 每隔多少step就存一次Summaries\n",
+    "        # save_checkpoints_steps:每隔多少个step就存一次checkpoint\n",
+    "        # save_checkpoints_secs: 每隔多少秒就存一次checkpoint，不可以和save_checkpoints_steps同时指定。如果二者都不指定，则使用默认值，即每600秒存一次。如果二者都设置为None，则不存checkpoints\n",
+    "        # keep_checkpoint_max：指定最多保留多少个checkpoints，也就是说当超出指定数量后会将旧的checkpoint删除。当设置为None或0时，则保留所有checkpoints\n",
+    "        # log_step_count_steps:该参数的作用是,(相对于总的step数而言)指定每隔多少step就记录一次训练过程中loss的值，同时也会记录global steps/s，通过这个也可以得到模型训练的速度快慢\n",
     "    # tf.estimator.Estimator(model_fn, config, params, model_dir)，\n",
     "        # model_fn为自定义的网络模型函数\n",
     "        # config用于控制内部和checkpoints等\n",
@@ -145,6 +157,12 @@
     "        # throttle_secs: 多少秒后又开始评估，如果没有新的 checkpoints 产生，则不评估，所以这个间隔是最小值\n",
     "    # tf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
     "    # tf.estimator.EstimatorSpec\n",
+    "        # mode: ModeKeys\n",
+    "        # predictions\n",
+    "        # loss: 训练损失Tensor\n",
+    "        # train_op\n",
+    "        # eval_metric_ops\n",
+    "        # 不同模式需要传入不同参数，对于mode == ModeKeys.TRAIN:必填字段是loss和train_op；对于mode == ModeKeys.EVAL:必填字段是loss；对于mode == ModeKeys.PREDICT:必填字段是predictions\n",
     "    # tf.estimator.ModeKeys.PREDICT\n",
     "    # tf.estimator.ModeKeys.EVAL\n",
     "    # tf.estimator.ModeKeys.PREDICT"
@@ -179,8 +197,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.python_io.TFRecordWriter(path)-->tf.io.TFRecordWriter\n",
+    "    # 为什么使用TFRecord?: TFRecord格式的文件存储形式会很合理的帮我们存储数据。TFRecord内部使用了“Protocol Buffer”二进制数据编码方案，它只占用一个内存块，只需要一次性加载一个二进制文件的方式即可，简单，快速，尤其对大型训练数据很友好。而且当我们的训练数据量比较大的时候，可以将数据分成多个TFRecord文件，来提高处理效率\n",
+    "    # writer.write(example.SerializeToString())，其中example.SerializeToString()是将example中的map压缩为二进制文件，更好的节省空间\n",
+    "    # example的构建: tf.train.Example(features = None)+tf.train.Features(feature = None)，其中feature是个map，key是要保存数据的名字，value是要保存的数据，格式必须符合tf.train.Feature实例要求\n",
+    "    # writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.FixedLenFeature和tf.VarLenFeature-->tf.io.FixedLenFeature和tf.io.VarLenFeature\n",
+    "    # 前者返回一个定长的tensor，后者返回不定长的；前者可传入shape参数，如为[]则要求tensor的shape=(batch_size,)，若为[k]，则输出tensor的shape=(batch_size,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.feature_column和tfrecord搭配使用，特征名要一致\n",
+    "# tf.feature_column.categorical_column_with_identity(): \n",
+    "    # 参数有特征名、num_buckets和default_value\n",
+    "    # 得到one-hot编码，即输出为N*num_buckets的矩阵\n",
+    "# tf.feature_column.embedding_column\n",
+    "    # 参数有categorical_column、dimension\n",
+    "    # 将sparse/categrical特征转化为dense向量\n",
+    "# tf.feature_column.numeric_column\n",
+    "    # 参数有特征名\n",
+    "    # 用于抽取数值类型的特征，即dense特征\n",
+    "# tf.feature_column.input_layer(features, feature_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# sess\n",
-    "# sess.run()这个里面只能放operation和tensor"
+    "# sess.run()这个里面只能放operation和tensor，还有参数feed_dict"
    ]
   },
   {
@@ -238,6 +298,37 @@
     "    # tf.nn.sigmoid_cross_entropy_with_logits\n",
     "\n",
     "# tf.keras.backend.binary_crossentropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 优化器\n",
+    "    # tf.train.AdagradOptimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 指标\n",
+    "    # tf.metrics.accuracy\n",
+    "    # tf.metrics.auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 异常\n",
+    "    # InvalidArgumentError: 当操作接收到无效参数时触发.例如,如果某个操作接收到的输入张量具有无效的值或形状,则可能发生该情况."
    ]
   },
   {
@@ -794,6 +885,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.layers.dense\n",
+    "# tf.layers.batch_normalization\n",
+    "# tf.layers.dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 归一化\n",
     "# tf.nn.l2_normalize(张量)：元素除以各自的范数"
    ]
@@ -850,16 +952,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": ""
   },
   "orig_nbformat": 4
  },
