--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -14,6 +14,7 @@
     "    - 面向切面编程AOP和装饰器\n",
     "    - is和==\n",
     "    - 新式类和经典类\n",
+    "- 异常\n",
     "- 关键词\n",
     "    - import\n",
     "    - yield\n",
@@ -636,6 +637,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 异常"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exception: 常规错误的基类\n",
+    "    # try: ... except Exception as e: ...\n",
+    "    # raise Exception()\n",
+    "# RuntimeError: 一般的运行时错误\n",
+    "    # raise RuntimeError()\n",
+    "# KeyError"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 关键词"
    ]
   },
@@ -1134,6 +1156,27 @@
     "print(list(zip(a,c))) # 元素个数与最短的列表一致\n",
     "zipped = zip(a,b)\n",
     "print(list(zip(*zipped))) # 与 zip 相反，*zipped 可理解为解压，返回二维矩阵式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 4, 7), (2, 5, 8), (3, 6, 9)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "c = [7,8,9]\n",
+    "zipped = zip(a,b,c) \n",
+    "print(list(zipped))"
    ]
   },
   {
@@ -4872,7 +4915,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_numpy()"
+    "# df.to_numpy()\n",
+    "# pd.DataFrame.from_dict\n",
+    "    # orient可选值为'columns', 'index'，默认是前者，若为'index'，则将key作为索引"
    ]
   },
   {
@@ -5461,16 +5506,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": ""
   },
   "metadata": {
    "interpreter": {
