update tf recsys with din and amazon

--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -84,6 +84,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.compat.v1.logging\n",
+    "    # set_verbosity(tf.compat.v1.logging.INFO)\n",
+    "    # 除了INFO(20)，还有DEBUG(10)，WARN(30)，ERROR(40)和FATAL(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# tf.summary: 能够保存训练过程以及参数分布图并在tensorboard显示\n",
     "    # tf.summary.scalar(tags, values, collections=None, name=None): 用来显示标量信息"
    ]
@@ -142,6 +153,7 @@
     "        # params该参数的值会传递给model_fn\n",
     "        # model_dir指定checkpoints和其他日志存放的路径\n",
     "        # estimator.predict\n",
+    "        # 定义在miniconda3/envs/ctrtf/lib/python3.6/site-packages/tensorflow_estimator/python/estimator下的estimator.py文件中\n",
     "    # tf.estimator.experimental.stop_if_no_decrease_hook:\n",
     "        # 定义early_stopping\n",
     "        # 参数:\n",
@@ -152,10 +164,13 @@
     "        # input_fn: 用来指定数据输入\n",
     "        # max_steps: 用来指定训练的最大步数\n",
     "        # hooks: 用来在 session 运行的时候做一些额外的操作\n",
+    "        # 定义在miniconda3/envs/ctrtf/lib/python3.6/site-packages/tensorflow_estimator/python/estimator下的training.py文件中\n",
     "    # tf.estimator.EvalSpec(input_fn, steps, throttle_secs)\n",
     "        # steps: 用来指定评估的迭代步数，如果为None，则在整个数据集上评估\n",
     "        # throttle_secs: 多少秒后又开始评估，如果没有新的 checkpoints 产生，则不评估，所以这个间隔是最小值\n",
+    "        # 定义在miniconda3/envs/ctrtf/lib/python3.6/site-packages/tensorflow_estimator/python/estimator下的training.py文件中\n",
     "    # tf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
+    "        # 定义在miniconda3/envs/ctrtf/lib/python3.6/site-packages/tensorflow_estimator/python/estimator下的training.py文件中\n",
     "    # tf.estimator.EstimatorSpec\n",
     "        # mode: ModeKeys\n",
     "        # predictions\n",
