update atten mode

--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -299,6 +299,7 @@
     "# 激活函数\n",
     "    # tf.nn.softmax\n",
     "    # tf.nn.sigmoid\n",
+    "    # tf.nn.relu\n",
     "\n",
     "    # tf.sigmoid"
    ]
