--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -438,7 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.random_normal(shape=[2,3], mean=0, stddev=1)"
+    "# tf.random_normal(shape=[2,3], mean=0, stddev=1)\n",
+    "# tf.random_uniform(shape, minval, maxval)"
    ]
   },
   {
