--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -616,6 +616,7 @@
    "outputs": [],
    "source": [
     "# tensor.get_shape().as_list()\n",
+    "    # 若获取的对应值是None，如batch_size，一般采用tf.shape(tensor)[]来获取；但在tf.compat.v1.get_variable中的shape参数不接受张量\n",
     "# tf.shape：获取张量的形状；返回的是一个tensor\n",
     "# tensorflow打印张量shape，如遇自定义变量(batch size)则会显示None\n",
     "# tf.reshape(tensor, shape)：若shape为[]，输出标量；若shape为[-1]，则展平张量\n",
