--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.10.0'"
+       "'1.15.0'"
       ]
      },
      "execution_count": 1,
@@ -287,7 +287,9 @@
     "    # tf.int64\n",
     "    # tf.float32\n",
     "    # tf.bool\n",
-    "# tf.to_float"
+    "# tf.to_float\n",
+    "# tf.to_int32\n",
+    "# tf.cast"
    ]
   },
   {
@@ -300,6 +302,7 @@
     "    # tf.nn.softmax\n",
     "    # tf.nn.sigmoid\n",
     "    # tf.nn.relu\n",
+    "    # tf.nn.sotfplus\n",
     "\n",
     "    # tf.sigmoid"
    ]
@@ -392,6 +395,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.range()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# tf.identity(input_tensor)：返回一个和input_tensor形状、内容都相同的tensor"
    ]
   },
@@ -421,7 +433,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.ones_like | tf.zeros_like"
+    "# tf.ones_like | tf.zeros_like\n",
+    "# tf.zeros() # 其中shape参数可用tf.shape指定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 4 6]]\n",
+      "[[3 2]\n",
+      " [6 4]]\n",
+      "[[2 1]\n",
+      " [2 0]]\n",
+      "[[1 2]\n",
+      " [0 2]]\n",
+      "[[0 1]\n",
+      " [0 2]\n",
+      " [1 0]\n",
+      " [1 2]]\n",
+      "[[0 1 1]\n",
+      " [1 0 1]]\n",
+      "[[0 2 3]\n",
+      " [4 0 6]]\n",
+      "[[8 9 9]\n",
+      " [9 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf.one_hot(indices, depth, on_value=None, off_value=None) # indices给出一个索引的列表，depth表示类别数，即最后onehot向量的长度\n",
+    "    # on_value默认值为1，off_value默认值为0\n",
+    "# tf.nn.top_k(input, k) # 这个函数表示要返回input中每行元素最大的值，并返回它们的索引下标\n",
+    "a = tf.constant([[1,2,3],[4,4,6]])\n",
+    "v, i = tf.nn.top_k(a, 2)\n",
+    "values = tf.reshape(v, [-1])\n",
+    "output_shape = tf.stack([2,3])\n",
+    "idx = tf.constant([[j]*2 for j in range(2)])\n",
+    "idx_u = tf.expand_dims(idx, 2)\n",
+    "i_u = tf.expand_dims(i, 2)\n",
+    "indices = tf.concat([idx_u, i_u], 2)\n",
+    "indices = tf.reshape(indices, [-1, indices.get_shape().as_list()[-1]])\n",
+    "# c = tf.sparse_to_dense(indices, output_shape, values) # 仍有问题，因为indices的必须按顺序\\\n",
+    "indices_sort = tf.sort(i, 1)\n",
+    "indices_sort_u = tf.expand_dims(indices_sort, 2)\n",
+    "indices_b = tf.concat([idx_u, indices_sort_u], 2)\n",
+    "indices_b = tf.reshape(indices_b, [-1, indices_b.get_shape().as_list()[-1]])\n",
+    "c = tf.sparse_to_dense(indices_b, output_shape, tf.constant(1))\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(a))\n",
+    "    print(sess.run(v))\n",
+    "    print(sess.run(i))\n",
+    "    # print(sess.run(idx))\n",
+    "    # print(sess.run(values))\n",
+    "    # print(sess.run(indices))\n",
+    "    # print(sess.run(c))\n",
+    "    print(sess.run(indices_sort))\n",
+    "    print(sess.run(indices_b))\n",
+    "    print(sess.run(c))\n",
+    "    print(sess.run(a*c))\n",
+    "    # print(sess.run(tf.ones([2,3]) * (-2 ** 32 + 1)))\n",
+    "    print(sess.run(tf.where(tf.cast(c, tf.bool), tf.constant([[9,9,9],[9,9,9]]), tf.constant([[8,8,8],[8,8,8]]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes = 3\n",
+    "labels = tf.constant([0,1,2])\n",
+    "output = tf.one_hot(labels, classes)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(output))"
    ]
   },
   {
@@ -430,16 +531,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.one_hot(indices, depth) # indices给出一个索引的列表，depth表示类别数，即最后onehot向量的长度"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tf.random_normal(shape=[2,3], mean=0, stddev=1)\n",
+    "# tf.random_normal(shape=[2,3], mean=0, stddev=1) # 默认均值为0，标准差为1\n",
+    "    # tf.random.truncated_normal() # 参数同上；若生成的数在某个区间之外，则重新进行生成，保证生成值在均值附近\n",
+    "    # shape参数可由tf.shape提供\n",
     "# tf.random_uniform(shape, minval, maxval)"
    ]
   },
@@ -454,13 +548,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"stack_3:0\", shape=(2,), dtype=int32)\n",
+      "Tensor(\"strided_slice_2:0\", shape=(), dtype=int32)\n",
+      "[[ 0  0  0 22]\n",
+      " [ 0  0  0  0]\n",
+      " [ 0  0  0 33]]\n"
+     ]
+    }
+   ],
    "source": [
     "# tf.SparseTensor(values,indices,dense_shape)：三个参数均可使用np.array定义，定义稀疏tensor，可以节省内存\n",
     "# tf.sparse_tensor_to_dense(sp_input,default_value=0)：将 SparseTensor 转换为稠密张量\n",
-    "# tf.sparse_to_dense(sparse_indices, output_shape, sparse_values, default_value=0)"
+    "# tf.sparse_to_dense(sparse_indices, output_shape, sparse_values, default_value=0)\n",
+    "sparse_indices = tf.constant([[0,3],[2,3]])\n",
+    "output_shape = tf.stack([3,4])\n",
+    "sparse_values = tf.constant([22,33])\n",
+    "a = tf.sparse_to_dense(sparse_indices, output_shape, sparse_values)\n",
+    "print(output_shape)\n",
+    "with tf.Session() as sess:\n",
+    "    print(output_shape[0])\n",
+    "    print(sess.run(a))"
    ]
   },
   {
@@ -473,7 +587,8 @@
     "    # tf.Variable() 每次都会新建变量。如果希望重用（共享）一些变量，就需要用到了get_variable()，它会去搜索变量名，有就直接用，没有再新建\n",
     "# tf.Variable(initial_value=0, name=\"...\", trainable=False, dtype=tf.int64, collections=[...])\n",
     "# tf.get_variable(name=\"...\", shape, collections=[...], initializer=tf.truncated_normal_initializer(stddev=0.001))\n",
-    "    # 其中参数shape的值不能为None"
+    "    # 其中参数shape的值不能为None\n",
+    "    # initializer还可取值：tf.zeros_initializer()"
    ]
   },
   {
@@ -520,11 +635,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 4 5]\n",
+      " [6 7 8]\n",
+      " [0 1 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf.unsorted_segment_sum(data, segment_ids, num_segments, name=None)\n",
+    "    # data为需要计算的tensor\n",
+    "    # segment_ids也是一个tensor，对应元素的值标志着data的下标\n",
+    "    # num_segments是一个 tensor,必须是以下类型之一：int32,int64，对应着最后生成结果的维度\n",
+    "    # 计算一个张量,使得 output[i] = data[index]，其中index为对应segment_ids中元素值为i的位置 \n",
+    "import numpy as np\n",
+    "data = tf.constant(np.arange(0,9).reshape(3,3))\n",
+    "segment_ids = tf.constant([2,0,1])\n",
+    "num_segments = 3\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(tf.unsorted_segment_sum(data, segment_ids, num_segments)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 4 4 4 8 8 8]\n",
+      "[ 1  2  3  4  6  7  8  9 11]\n",
+      "[0 0 1 2 3 0 4 5 6 7 0 8]\n",
+      "[[0 0 1 2]\n",
+      " [3 0 4 5]\n",
+      " [6 7 0 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b,k,n=3,3,4\n",
+    "indices=tf.constant([[1,2,3],[0,2,3],[0,1,3]])\n",
+    "values=tf.constant([[0,1,2],[3,4,5],[6,7,8]]) # 原始矩阵[[-1,0,1,2],[3,2,4,5],[6,7,2,8]]\n",
+    "indices_flat = tf.reshape(indices, [-1]) + tf.div(tf.range(b * k), k) * n\n",
+    "ret_flat = tf.unsorted_segment_sum(tf.reshape(values, [-1]), indices_flat, b * n)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(tf.div(tf.range(b * k), k) * n))\n",
+    "    print(sess.run(indices_flat))\n",
+    "    print(sess.run(ret_flat))\n",
+    "    print(sess.run(tf.reshape(ret_flat, [b, n])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.pow | tf.square | tf.add | tf.sqrt | tf.exp"
+    "# tf.pow | tf.square | tf.add | tf.sqrt | tf.exp\n",
+    "# tf.squared_difference(x,y): 计算张量 x、y 对应元素差平方"
    ]
   },
   {
@@ -616,7 +792,7 @@
    "outputs": [],
    "source": [
     "# tensor.get_shape().as_list()\n",
-    "    # 若获取的对应值是None，如batch_size，一般采用tf.shape(tensor)[]来获取；但在tf.compat.v1.get_variable中的shape参数不接受张量\n",
+    "    # 若获取的对应值是None，如batch_size，一般采用tf.shape(tensor)[]来获取(可在reshape函数中使用)；但在tf.compat.v1.get_variable中的shape参数不接受张量\n",
     "# tf.shape：获取张量的形状；返回的是一个tensor\n",
     "# tensorflow打印张量shape，如遇自定义变量(batch size)则会显示None\n",
     "# tf.reshape(tensor, shape)：若shape为[]，输出标量；若shape为[-1]，则展平张量\n",
@@ -629,8 +805,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 该函数可以返回一个tensor的形状,即使我们的tensor定义时某一维的形状定义为None\n",
+    "# def get_shape(tensor):\n",
+    "#     static_shape = tensor.shape.as_list()\n",
+    "#     dynamic_shape = tf.unstack(tf.shape(tensor))\n",
+    "#     dims = [s[1] if s[0] is None else s[0]\n",
+    "#             for s in zip(static_shape, dynamic_shape)]\n",
+    "#     return dims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.12398382 -0.26216006  0.19951728]\n",
+      " [ 0.23893198 -0.06036314  0.759693  ]]\n",
+      "[[-1.0713873]\n",
+      " [-1.5998234]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.random_normal(shape=[2,3])\n",
+    "b = a[:, 2]\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(a))\n",
+    "    print(sess.run(tf.expand_dims(b, 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# tf.concat(values, axis)：按照指定的已经存在的轴进行拼接\n",
-    "# tf.stack(values, axis)：按照指定的新建的轴进行拼接"
+    "# tf.stack(values, axis)：按照指定的新建的轴进行拼接\n",
+    "    # tf.stack() 替代 tf.pack()\n",
+    "# tf.unstack(num=None, axis=0)：矩阵分解"
    ]
   },
   {
@@ -689,7 +906,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.equal(A, B)：对比这两个矩阵或者向量的相等的元素，如果是相等的那就返回True，否则返回False，返回的值的矩阵维度和A是一样的"
+    "# tf.equal(A, B)：对比这两个矩阵或者向量的相等的元素，如果是相等的那就返回True，否则返回False，返回的值的矩阵维度和A是一样的\n",
+    "# tf.greater(x, y)\n",
+    "# tf.less(x, y)\n",
+    "# tf.not_equal(x, y)"
    ]
   },
   {
@@ -698,7 +918,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.where(condition, x=None, y=None)：若只有参数condition，则返回condition中为True的索引。若有x和y，则x, y相同维度，返回值是对应元素，condition中元素为True的元素替换为x中的元素，为False的元素替换为y中对应元素"
+    "# tf.where(condition, x=None, y=None)：\n",
+    "# 若只有参数condition，则返回condition中为True的索引\n",
+    "# 若有x和y，则x, y相同维度，返回值是对应元素，condition中元素为True的元素替换为x中的元素，为False的元素替换为y中对应元素"
    ]
   },
   {
@@ -747,6 +969,91 @@
    "outputs": [],
    "source": [
     "# tf.cond()类似于if...else..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10 20 30 40 50 60 70 80 90]\n",
+      "[1 1 1 1 1 1 1 1 1 1]\n",
+      "[ 1 11 21 31 41 51 61 71 81 91]\n",
+      "[11 51 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf.gather()用来取出tensor中指定索引位置的元素\n",
+    "temp1 = tf.range(0,10)*10\n",
+    "temp2 = tf.constant(1, shape=[10])\n",
+    "temp3 = temp1+temp2\n",
+    "temp4 = tf.gather(temp3, [1,5,9])\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    print(sess.run(temp1))\n",
+    "    print(sess.run(temp2))\n",
+    "    print(sess.run(temp3))\n",
+    "    print(sess.run(temp4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"ScatterNd_5:0\", shape=(8,), dtype=int32)\n",
+      "Tensor(\"Cast_1:0\", shape=(8,), dtype=float32)\n",
+      "[ 0. 11.  0. 10.  9.  0.  0. 12.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf.scatter_nd对零张量进行赋值\n",
+    "# updates的形状：indices.shape[:−1]+shape[indices.shape[−1]:]=(4,)+(,)=(4,)\n",
+    "indices = tf.constant([[4], [3], [1], [7]])\n",
+    "updates = tf.constant([9, 10, 11, 12])\n",
+    "shape = tf.constant([8])\n",
+    "scatter = tf.scatter_nd(indices, updates, shape)\n",
+    "print(scatter)\n",
+    "scatter = tf.cast(scatter, tf.float32)\n",
+    "print(scatter)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(scatter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2]\n",
+      " [5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf.slice 抽取数据\n",
+    "    # begin表示从inputs的哪几个维度上的哪个元素开始抽取\n",
+    "    # size表示在inputs的各个维度上抽取的元素个数\n",
+    "    # 若begin[]或size[]中出现-1,表示抽取对应维度上的所有元素\n",
+    "x = [[1,2,3],[4,5,6]]\n",
+    "with tf.Session() as sess:\n",
+    "    begin = [0,1] # 从x[0,1]，即元素2开始抽取\n",
+    "    size = [2,1] # 从x[0,1]开始，对x的第一个维度(行)抽取2个元素，对x的第二个维度(行)抽取1个元素\n",
+    "    print(sess.run(tf.slice(x, begin, size)))"
    ]
   },
   {
@@ -965,15 +1272,23 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f731b860690565808261aa16d59807e4733507b408e88bbb2c86737b8c69cb28"
+   "hash": "5121dbc7a5fd939b11e545b8c787b185a36dfa9d128bb939b33e3da03e1b4a22"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.13 64-bit ('tfone': conda)",
+   "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   },
   "orig_nbformat": 4
  },
