add usersparseexpert with static dselect

--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -4375,6 +4375,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '0', '0', '0', '0', '1', '0', '0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.binary_repr: 得到对应数值的二进制表示\n",
+    "# np.invert: 对数值按位取反\n",
+    "print(list(np.binary_repr(4, width=8)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
