--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -245,7 +245,8 @@
     "# tf.feature_column.numeric_column\n",
     "    # 参数有特征名\n",
     "    # 用于抽取数值类型的特征，即dense特征\n",
-    "# tf.feature_column.input_layer(features, feature_columns)"
+    "# tf.feature_column.input_layer(features, feature_columns)\n",
+    "    # config = tf.ConfigProto();session = tf.Session(config=config)"
    ]
   },
   {
@@ -255,7 +256,9 @@
    "outputs": [],
    "source": [
     "# sess\n",
-    "# sess.run()这个里面只能放operation和tensor，还有参数feed_dict"
+    "# sess.run()这个里面只能放operation和tensor，还有参数feed_dict\n",
+    "# tf.ConfigProto()主要的作用是配置tf.Session的运算方式，比如gpu运算或者cpu运算\n",
+    "    # 参数如device_count={'GPU':0, 'CPU':4}"
    ]
   },
   {
@@ -779,6 +782,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3\n",
+      "[3 6 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf.math.accumulate_n\n",
+    "a=tf.constant(-1)\n",
+    "b=tf.constant([1,2,3])\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(tf.math.accumulate_n([a,a,a])))\n",
+    "    print(sess.run(tf.math.accumulate_n([b,b,b])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.math.reduce_prod\n",
+    "# tf.math.reduce_sum\n",
+    "# tf.math.log"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -816,17 +853,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.12398382 -0.26216006  0.19951728]\n",
-      " [ 0.23893198 -0.06036314  0.759693  ]]\n",
-      "[[-1.0713873]\n",
-      " [-1.5998234]]\n"
+      "[[-0.01855624  0.9438359  -0.8169631 ]\n",
+      " [ 0.5846827  -0.23804206 -1.5526854 ]]\n",
+      "[[-0.15797293]\n",
+      " [-1.8465679 ]]\n"
      ]
     }
    ],
@@ -840,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,6 +1094,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.control_dependencies()函数是用来控制计算流图的，也就是给图中的某些计算指定顺序\n",
+    "    # 有的时候我们想要指定某些操作执行的依赖关系，比如想要让参数先更新，然后再获取参数更新后的值等\n",
+    "    # 如tf.control_dependencies([a,b]): 按先后顺序执行a、b种操作"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1266,7 +1314,8 @@
     "    # model.fit()\n",
     "        # verbose: 日志显示，0为不在标准输出流输出日志信息，1为输出进度条记录，2为每个epoch输出一行记录\n",
     "    # model.predict()\n",
-    "# tf.keras.initializers.glorot_normal"
+    "# tf.keras.initializers.glorot_normal\n",
+    "# tf.keras.initializers.RandomUniform(-gamma / 100, gamma / 100)"
    ]
   }
  ],
