--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +72,7 @@
     "    - os\n",
     "    - zipfile\n",
     "    - 文件读写\n",
+    "- sys\n",
     "- 拷贝: copy\n",
     "- pickle\n",
     "- zipfile\n",
@@ -633,7 +641,9 @@
    "source": [
     "# import\n",
     "    # 如: from parts import * \n",
-    "    # 若在parts.py的第一行中指定__all__ = ['Encoder', 'Decoder', 'Loss']，则只会导入Encoder, Decoder, Loss"
+    "    # 若在parts.py的第一行中指定__all__ = ['Encoder', 'Decoder', 'Loss']，则只会导入Encoder, Decoder, Loss\n",
+    "# ImportError: cannot import name 'create_T_one_hot'\n",
+    "    # 交叉import: a,b两个python文件，在a中import b中的类，又在b中import a中的类，就会报这种异常"
    ]
   },
   {
@@ -1037,6 +1047,27 @@
     "        ## 传入两个参数(x,y)对应于(self,other)，这里的self表示当前的数，而other是前面已经出现比较过的对象\n",
     "# 关键字lambda表示匿名函数(和函数式编程有关)，冒号前面的x表示函数参数\n",
     "    # 返回值可结合and和or进行条件选择"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = lambda x:2*x\n",
+    "a(2)"
    ]
   },
   {
@@ -1812,6 +1843,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{2: 3}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .pop()\n",
+    "d={1:2,2:3}\n",
+    "print(d.pop(1))\n",
+    "d"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2076,6 +2137,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# '*'*5.0: TypeError: can't multiply sequence by non-int of type 'float'\n",
+    "    # '*'*5则没有问题"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2220,7 +2291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.makedirs(dirname, exist_ok=True)"
+    "# os.makedirs(dirname, exist_ok=True)\n",
+    "# os.path.exists"
    ]
   },
   {
@@ -2260,6 +2332,22 @@
    "outputs": [],
    "source": [
     "# zipfile.ZipFile(filename).read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sys.exit(1)"
    ]
   },
   {
@@ -3336,6 +3424,7 @@
    "source": [
     "# 更改数组类型\n",
     "# np.random.rand\n",
+    "# np.random.uniform()\n",
     "# .astype(np.float32) | .view(np.int32)\n",
     "Z = (np.random.rand(10)*100).astype(np.float32)\n",
     "print(Z)\n",
@@ -3466,7 +3555,8 @@
    "outputs": [],
    "source": [
     "# np.linalg.inv()：矩阵求逆\n",
-    "# np.linalg.norm(x, ord):求范数，ord默认是二范数"
+    "# np.linalg.norm(x, ord):求范数，ord默认是二范数\n",
+    "# np.linalg.qr: 计算矩阵的QR分解。把矩阵A作为QR，q是正交的，r是上三角形"
    ]
   },
   {
@@ -4254,6 +4344,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.pi\n",
+    "# np.cos\n",
+    "# np.sin\n",
+    "# np.sign\n",
+    "# np.log\n",
+    "# np.abs\n",
+    "# np.triu\n",
+    "# np.tril"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -4566,6 +4672,29 @@
    "source": [
     "# np.savez_compressed(\"xxx.npz\", data)\n",
     "# np.load(filepath)[\"arr_0\"].astype(np.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 1, 1, 0, 0, 0, 1])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.bincount\n",
+    "import numpy as np\n",
+    "x=np.array([0,1,1,3,2,1,7]) \n",
+    "np.bincount(x) # 统计每个索引值出现的次数"
    ]
   },
   {
@@ -5150,6 +5279,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scipy.linalg.lu: LU分解：将矩阵A分解成一个下三角矩阵L和一个上三角矩阵U的乘积 A=LU，称为对矩阵A的LU分解"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5162,7 +5300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# math.floor\n",
+    "# int(math.floor/ceil)\n",
     "# math.log2 was introduced in Python 3.3，会出现问题: AttributeError: 'module' object has no attribute 'log2'\n",
     "    # 在早期的版本中可使用math.log(num, 2)"
    ]
@@ -5602,8 +5740,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   },
   "metadata": {
    "interpreter": {
