--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -1102,7 +1102,8 @@
    "source": [
     "# tf.control_dependencies()函数是用来控制计算流图的，也就是给图中的某些计算指定顺序\n",
     "    # 有的时候我们想要指定某些操作执行的依赖关系，比如想要让参数先更新，然后再获取参数更新后的值等\n",
-    "    # 如tf.control_dependencies([a,b]): 按先后顺序执行a、b种操作"
+    "    # 如tf.control_dependencies([a,b]): 按先后顺序执行a、b种操作\n",
+    "# tf.assign_add"
    ]
   },
   {
