--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -2954,6 +2954,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# torch.distributions.uniform.Uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
