--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -73,10 +73,12 @@
     "    - zipfile\n",
     "    - 文件读写\n",
     "- sys\n",
+    "- logging\n",
     "- 拷贝: copy\n",
     "- pickle\n",
     "- zipfile\n",
     "- argparse\n",
+    "- click\n",
     "- importlib\n",
     "- xlrd\n",
     "- json\n",
@@ -91,6 +93,7 @@
     "- sklearn\n",
     "- scipy\n",
     "- math\n",
+    "- nltk\n",
     "- 神经元和神经网络实现"
    ]
   },
@@ -2147,6 +2150,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 去除标点\n",
+    "# text = text.translate(str.maketrans(string.punctuation, ' ' * len(string.punctuation)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2354,6 +2367,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# logging.basicConfig(level=logging.INFO)\n",
+    "# logger = logging.getLogger()\n",
+    "# logger.setLevel(logging.INFO)\n",
+    "# formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "# file_handler = logging.FileHandler(log_file_path)\n",
+    "# file_handler.setLevel(logging.INFO)\n",
+    "# file_handler.setFormatter(formatter)\n",
+    "# logger.addHandler(file_handler)\n",
+    "# logger.info('xxx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 拷贝"
    ]
   },
@@ -2454,6 +2491,28 @@
     "    # 该函数的参数\n",
     "        # required - 可选参数是否可以省略 (仅针对可选参数)\n",
     "# args = parser.parse_args()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### click"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import click\n",
+    "# @click.command()\n",
+    "    # Click是通过装饰器来把一个函数方法装饰成命令行接口的，这个装饰器方法就是 @click.command()\n",
+    "# @click.argument('xxx') 命令行直接给出对应值\n",
+    "# @click.option('--xxx') 命令行需要先--xxx，再给出对应值\n",
+    "# 还可包括参数type, default, help, is_flag(布尔值)\n",
+    "    # 其中type可取值: click.Choice([xx,xx,xx]), click.Path(exists=True), str, int, float"
    ]
   },
   {
@@ -5309,6 +5368,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nltk.download('xxx', download_dir)\n",
+    "# nltk.data.path: list\n",
+    "# from nltk.corpus import reuters\n",
+    "# from nltk.corpus import stopwords\n",
+    "# from nltk import word_tokenize\n",
+    "    # word_tokenize（str_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 神经元和神经网络实现"
    ]
   },
@@ -5740,16 +5820,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": ""
   },
   "metadata": {
    "interpreter": {
