--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -9,6 +9,7 @@
     "- 张量计算\n",
     "- torch.nn\n",
     "- torch.utils\n",
+    "- torchnlp\n",
     "- Pipeline"
    ]
   },
@@ -71,6 +72,15 @@
     "print(torch.version.cuda)\n",
     "print(torch.backends.cudnn.version())\n",
     "print(torch.cuda.get_device_name(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.set_num_threads(n_threads)"
    ]
   },
   {
@@ -382,6 +392,15 @@
     "device = torch.device(\"cuda\")\n",
     "logprob = torch.tensor([1,2,3,4]).float().to(device)\n",
     "torch.zeros_like(logprob).device, torch.zeros(logprob.size()).device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.empty"
    ]
   },
   {
@@ -2772,6 +2791,25 @@
    "source": [
     "# torch.utils.data\n",
     "\t# data.DataLoader(dataset, 4) # 第二个参数为batch_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## torchnlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from torchnlp.encoders.text import SpacyEncoder\n",
+    "    # SpacyEncoder(text_list, min_occurrences)\n",
+    "    # encoder.encode(text) # 索引化\n",
+    "    # encoder.vocab_size"
    ]
   },
   {
