--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -621,6 +621,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ndarray转化为tensor\n",
+    "    # 通过 convert_to_tensor 这个函数进行转换"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
