add bert for enf

--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -3828,7 +3828,9 @@
    "outputs": [],
    "source": [
     "# np.column_stack 按列合并\n",
-    "# np.row_stack 按行合并"
+    "# np.row_stack 按行合并\n",
+    "# np.concatenate((a,b), axis=0)\n",
+    "# np.stack"
    ]
   },
   {
