add heybox dataset

--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -2661,7 +2661,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from random import randint"
+    "from random import randint\n",
+    "# random.sample(list, 2) # 从list中随机抽取2个元素"
    ],
    "outputs": [],
    "metadata": {}
@@ -4823,7 +4824,7 @@
     "sparse_features = ['C' + str(i) for i in range(1, 27)]\n",
     "dense_features = ['I' + str(i) for i in range(1, 14)]\n",
     "column_names = ['label']+dense_features+sparse_features \n",
-    "data = pd.read_csv(data_path, sep='\\t', header=None, names=column_names)\n",
+    "data = pd.read_csv(data_path, sep='\\t', header=None, names=column_names) # 参数chunksize可按块读取，之后存放到到列表中再使用pd.concat(axis=0)连接起来\n",
     "data"
    ],
    "outputs": [
@@ -5220,6 +5221,7 @@
    "source": [
     "# df.dropna(inplace=True) 能够找到DataFrame类型数据的空值（缺失值），将空值所在的行/列删除后，将新的DataFrame作为返回值返回\n",
     "    # 参数how: 筛选方式。‘any’，表示该行/列只要有一个以上的空值，就删除该行/列；‘all’，表示该行/列全部都为空值，就删除该行/列。\n",
+    "    # axis=1为列，默认为行\n",
     "# df.fillna(): 填充缺失值；仅运行该语句原对象不变，还需要赋值"
    ],
    "outputs": [],
@@ -5262,6 +5264,16 @@
    "source": [
     "# new_df = pd.DataFrame()\n",
     "# new_df = new_df.append(df, ignore_index=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# data[['xx', 'xxx', 'xxxx']]\n",
+    "# data[(data['xxx']==12)&(data['xx']>5)]"
    ],
    "outputs": [],
    "metadata": {}
