add pytorch news reco

--- a/python/basic/basics.ipynb
+++ b/python/basic/basics.ipynb
@@ -2057,7 +2057,7 @@
     "# ASCII: '0':48; 'A':65; 'a':97\n",
     "# 问题: SyntaxError: Non-UTF-8 code starting with '\\xbb' in file quick_start.py on line 13, but no encoding declared\n",
     "    # 当python文件中出现中文\n",
-    "    # 解决办法为: 在文件首行添加: # -*- coding:utf-8 -*-"
+    "    # 解决办法为: 在文件首行添加: # -*- coding:utf-8 -*-/# _*_ coding: utf-8 _*_"
    ],
    "outputs": [],
    "metadata": {}
@@ -2370,6 +2370,22 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### time"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# time.strftime('%m_%d-%H-%M-%S', time.localtime(time.time()))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### logging"
    ],
    "metadata": {}
@@ -2572,7 +2588,8 @@
     "\t# header = next(csv_reader) # 打印列名\n",
     "\t# for row in csv_reader: \n",
     "        \t# print(row)\n",
-    "# 或者使用pandas读取"
+    "# 或者使用pandas读取(pandas读取要慢)\n",
+    "# csv读取到的是str"
    ],
    "outputs": [],
    "metadata": {}
@@ -4819,6 +4836,7 @@
    "execution_count": 4,
    "source": [
     "# pandas.read_excel(path, 'sheet1')\n",
+    "# 使用pandas读取csv要比csv库来的慢\n",
     "import pandas as pd\n",
     "data_path = 'test/test_pd/test.txt'\n",
     "sparse_features = ['C' + str(i) for i in range(1, 27)]\n",
